--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ h1 {
   font-family: 'PT Sans', sans-serif;
   font-size: 22px;
   font-weight: 900;
-  margin-left: -8px;
 }
 
 h2 {
@@ -37,36 +36,42 @@ a:hover {
 
 /*Details*/
 
+@media (max-width: 2000px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 500px;
+    margin: 30px auto;
+  }
+}
+
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
     width: 500px;
+    margin: 16px auto; /* This automatically sets left/right margins */
   }
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    width: 500px;
+    width: 600px;
+    margin: 16px auto; /* This automatically sets left/right margins */
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 300px;
+    width: 600px;
+    margin: 16px auto; /* This automatically sets left/right margins */
   }
 }
 
-.container {
-  width: 500px;
-  margin: 0 auto; /* This automatically sets left/right margins */
-}
 .card-white {
   background-color: white;
   margin: 32px auto;
   padding: 24px;
   border-radius: 4px;
   box-shadow: 1px 10px 30px rgba(0,0,0,0.2);
-
 }
 
 .text-center {
